# corevo

./: CLAUDE.md  Cargo.toml  README.md
corevo-lib/src/: indexer.rs
corevo-tui/: Cargo.toml
corevo-tui/src/: action.rs  app.rs  main.rs
corevo-tui/src/components/: history.rs  home.rs  propose.rs  voting.rs
src/: chain_helpers.rs  crypto.rs  indexer.rs  main.rs  primitives.rs
