[workspace]
resolver = "2"
members = ["corevo-lib", "corevo-tui"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Substrate / Subxt
subxt = { version = "0.44" }
subxt-signer = { version = "0.44", features = ["subxt"] }

# Async runtime
tokio = { version = "1.44.2", features = ["macros", "time", "rt-multi-thread", "sync"] }
futures = "0.3"

# Crypto
crypto_box = { version = "0.9", features = ["chacha20"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
blake2 = "0.10.6"
rand = "0.8"

# Encoding
codec = { package = "parity-scale-codec", version = "3.7.4" }
hex = "0.4.3"
hex-literal = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
mongodb = "3.5.0"

# Logging
log = "0.4.29"
env_logger = "0.11"

# Error handling
thiserror = "2"
color-eyre = "0.6"

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio-util = "0.7"
